# ocr_finetuning

./: .gitignore  Dockerfile.train  LABEL_STUDIO_SETUP.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.cursor/rules/: conda-env.mdc
.github/workflows/: deploy.yml  train.yml
config/: default_config.yaml
config/client_configs/: example_client.yaml
deployment/azure/: LABEL_STUDIO_AZURE_DEPLOYMENT.md  autoscale_profiles.yaml  azure_config.yaml  azure_ml_job.yaml  deploy_container.sh  deploy_nemotron_aci.sh  label_studio_aci_deploy.sh  label_studio_app_service_deploy.sh  label_studio_dockerfile  label_studio_storage_setup.sh  nemotron_conda_env.yaml  nemotron_dockerfile  nemotron_ml_deployment.yaml  nemotron_ml_endpoint.yaml  nemotron_ml_job.yaml
deployment/scripts/: export_model.py
docs/: MONITORING_TRAINING.md
notebooks/: 01_data_analysis.ipynb  02_azure_di_baseline.ipynb  03_label_studio_prep.ipynb  04_model_evaluation.ipynb
scripts/: start_label_studio.sh
serving/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
src/: __init__.py
src/data/: __init__.py  azure_di_loader.py  coco_converter.py  doctr_converter.py  label_studio_loader.py  nemotron_converter.py
src/evaluation/: __init__.py  compare_models.py  evaluate_ocr.py
src/preprocessing/: __init__.py  azure_di_preprocessor.py  image_augmentation.py
src/serving/: __init__.py  model_loader.py  nemotron_score.py  nemotron_server.py  (+1 more)
tests/: __init__.py  test_converters.py  test_data_loaders.py  test_training.py
trained_models/: .gitkeep
(+17 files in other folders)
